<resources>
    <string name="app_name">TripApp</string>
    <string name="main_text_1">연말연시 특별할인 이벤트 \n 최대 20% 할인</string>
    <string name="main_text_2_1">특가 여행지</string>
    <string name="main_text_2_2">특가 여행지 보기</string>
    <string name="main_card_text_1_1">스위스</string>
    <string name="main_card_text_1_2">최대 20% 할인</string>
    <string name="main_card_text_2_1">호주</string>
    <string name="main_card_text_2_2">최대 10% 할인</string>
    <string name="main_card_text_3_1">조지아</string>
    <string name="main_card_text_3_2">최대 20% 할인</string>
    <string name="main_card_text_4_1">몽골</string>
    <string name="main_card_text_4_2">최대 20% 할인</string>
    <string name="main_card_text_5_2">최대 15% 할인</string>
    <string name="main_card_text_5_1">네팔</string>
    <string name="main_card_text_6_2">최대 5% 할인</string>
    <string name="main_card_text_6_1">하와이</string>

    <string name="drawer_opened">Opened Drawer</string>
    <string name="drawer_closed">Closed Drawer</string>

    <string name="about_main">
    Agoda is part of Booking Holdings Inc., a global leader in online travel and related services.
    </string>
    <string name="about_detail">
    Agoda has a global network of 4.5 million hotels and vacation rentals around the world, helping everyone travel anywhere with affordable prices, including flights and activities. Agoda.com and the Agoda mobile app are available in 39 languages ​​and have 24/7 customer support. Booking Holdings Inc. Agoda, part of (Nasdaq: BKNG), is headquartered in Singapore and has over 7,000 employees in 27 countries/regions around the world who are committed to using the best technology to make travel easier and more convenient.
    </string>
    <string name="about_more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>